--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,31 @@
-*{
-    background-color: aqua;
-    /* slet */
+.page_pic img{
+    width: 90%;
+    margin: 0 10em;
 }
+
+h1{
+    text-align: center;
+}
+
+h2{
+text-align: center;
+}
+
+.two_products{
+    display: flex;
+    gap: 10em;
+    margin: 0 10em;
+}
+
+.two_pics{
+    display: flex;
+    gap: 10em;
+    justify-content: space-between;
+    margin: 0 10em;
+}
+
+.two_pics img{
+    width: 80%;
+}
+
+
